Layout Issues in NavigationBar fixed

--- a/src/main/webapp/VAADIN/themes/quick-start-material/styles/animations.scss
+++ b/src/main/webapp/VAADIN/themes/quick-start-material/styles/animations.scss
@@ -2,4 +2,7 @@
     .animate-in-slide-down {
         animation: valo-animate-in-slide-down 1s;
     }
+    .animate-in-fade {
+        animation:  valo-animate-in-fade 1s;
+    }
 }
